--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "format": "prettier . --write --ignore-unknown",
     "format:check": "prettier . --check"
   },
@@ -24,6 +25,8 @@
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.4",
     "prettier": "^3.3.2",
     "typescript": "~5.5.2"
   }
