--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@tailwindcss/postcss": "4.0.0-alpha.13",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
-    "geist": "1.2.2",
+    "clsx": "^2.1.1",
     "next": "^14.2.4",
     "next-mdx-remote": "^4.4.1",
     "postcss": "^8.4.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "sugar-high": "^0.6.0",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "4.0.0-alpha.13"
   },
   "devDependencies": {
