--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "clsx": "^2.1.1",
+    "front-matter": "^4.0.2",
     "next": "^14.2.4",
     "next-mdx-remote": "^4.4.1",
     "postcss": "^8.4.35",
@@ -21,7 +22,8 @@
     "react-icons": "^5.2.1",
     "sugar-high": "^0.6.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss": "4.0.0-alpha.13"
+    "tailwindcss": "4.0.0-alpha.13",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
