--- a/package.json
+++ b/package.json
@@ -4,26 +4,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "format": "prettier . --write --ignore-unknown",
-    "format:check": "prettier . --check"
+    "format:check": "prettier . --check",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@tailwindcss/postcss": "4.0.0-alpha.13",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
-    "geist": "1.2.2",
+    "clsx": "^2.1.1",
+    "front-matter": "^4.0.2",
     "next": "^14.2.4",
     "next-mdx-remote": "^4.4.1",
     "postcss": "^8.4.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "sugar-high": "^0.6.0",
-    "tailwindcss": "4.0.0-alpha.13"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "4.0.0-alpha.13",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.4",
     "prettier": "^3.3.2",
     "typescript": "~5.5.2"
   }
