--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "eslint-config-next": "^14.2.4",
     "prettier": "^3.3.2",
     "typescript": "~5.5.2"
-  }
+  },
+  "engines": {
+    "node": ">=20.x.x"
+  },
+  "packageManager": "pnpm@9.4.0+sha256.b6fd0bfda555e7e584ad7e56b30c68b01d5a04f9ee93989f4b93ca8473c49c74"
 }
