ci(checks): check format

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,8 @@ jobs:
         run: corepack enable
       - name: install dependencies
         run: pnpm i
+      - name: check format
+        run: pnpm format:check
       - name: build
         run: pnpm build
       - name: lint
