style: explicit type imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
     "module": "esnext",
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
+    "moduleDetection": "force",
     "isolatedModules": true,
+    "verbatimModuleSyntax": true,
     "jsx": "preserve",
     "baseUrl": ".",
     "incremental": true,
@@ -20,7 +22,9 @@
       }
     ],
     "strictNullChecks": true,
-    "allowJs": true
+    "allowJs": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
