--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.1",
     "@tailwindcss/postcss": "4.0.0-alpha.20",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
