--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.1",
-    "@tailwindcss/postcss": "4.0.0-alpha.20",
+    "@tailwindcss/postcss": "4.0.0-beta.2",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "clsx": "^2.1.1",
@@ -24,7 +24,7 @@
     "react-icons": "^5.3.0",
     "sugar-high": "^0.7.4",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss": "4.0.0-alpha.31",
+    "tailwindcss": "4.0.0-beta.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
