--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.1",
-    "@tailwindcss/postcss": "4.0.0-alpha.20",
+    "@tailwindcss/postcss": "4.0.0-beta.2",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "clsx": "^2.1.1",
@@ -24,7 +24,7 @@
     "react-icons": "^5.3.0",
     "sugar-high": "^0.7.4",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss": "4.0.0-alpha.31",
+    "tailwindcss": "4.0.0-beta.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -41,5 +41,5 @@
   "engines": {
     "node": ">=20.x.x"
   },
-  "packageManager": "pnpm@9.4.0+sha256.b6fd0bfda555e7e584ad7e56b30c68b01d5a04f9ee93989f4b93ca8473c49c74"
+  "packageManager": "pnpm@9.14.2+sha256.06e65a4965baff6d6097f9c8f75c35f6d420974dbc03d775009056a69edfd271"
 }
