--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,11 +16,11 @@
     "@vercel/speed-insights": "^1.1.0",
     "clsx": "^2.1.1",
     "front-matter": "^4.0.2",
-    "next": "^14.2.18",
+    "next": "^15.1.0",
     "next-mdx-remote": "^5.0.0",
     "postcss": "^8.4.47",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.3.0",
     "sugar-high": "^0.7.4",
     "tailwind-merge": "^2.5.4",
@@ -29,17 +29,23 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.8.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.4",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.1.0",
     "prettier": "^3.3.3",
     "typescript": "~5.5.4"
   },
   "engines": {
     "node": ">=20.x.x"
   },
-  "packageManager": "pnpm@9.14.2+sha256.06e65a4965baff6d6097f9c8f75c35f6d420974dbc03d775009056a69edfd271"
+  "packageManager": "pnpm@9.14.2+sha256.06e65a4965baff6d6097f9c8f75c35f6d420974dbc03d775009056a69edfd271",
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.0.1",
+      "@types/react-dom": "19.0.2"
+    }
+  }
 }
