chore: scaffold shadcn

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "verbatimModuleSyntax": true,
     "jsx": "preserve",
     "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    },
     "incremental": true,
     "plugins": [
       {
