--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@radix-ui/react-accordion": "^1.2.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "front-matter": "^4.0.2",
+    "lucide-react": "^0.469.0",
     "next": "^15.1.0",
     "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
@@ -22,6 +24,7 @@
     "react-icons": "^5.3.0",
     "sugar-high": "^0.7.4",
     "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
