--- a/package.json
+++ b/package.json
@@ -11,20 +11,23 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.1",
-    "@tailwindcss/postcss": "4.0.0-beta.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "front-matter": "^4.0.2",
+    "lucide-react": "^0.469.0",
     "next": "^15.1.0",
     "next-mdx-remote": "^5.0.0",
-    "postcss": "^8.4.47",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.3.0",
     "sugar-high": "^0.7.4",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss": "4.0.0-beta.4",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -33,9 +36,12 @@
     "@types/node": "^20.11.17",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.0",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.5.4",
     "typescript-eslint": "^8.18.0"
   },
