--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.3.0",
+    "remark-smartypants": "^3.0.2",
     "server-only": "^0.0.1",
     "sugar-high": "^0.9.3",
     "tailwind-merge": "^2.6.0",
