--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,9 +20,4 @@ jobs:
         run: corepack enable
       - name: install dependencies
         run: pnpm i
-      - name: build
-        run: pnpm build
-      - name: lint
-        run: pnpm lint
-      - name: typecheck
-        run: pnpm typecheck
+      - run: pnpm turbo run ci
