--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,12 +1,11 @@
 {
 	"$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
 	"vcs": {
-		"enabled": false,
+		"enabled": true,
 		"clientKind": "git",
-		"useIgnoreFile": false
+		"useIgnoreFile": true
 	},
 	"files": {
-		"includes": ["**", "!node_modules", "!.next"],
 		"ignoreUnknown": false
 	},
 	"formatter": {
