--- a/package.json
+++ b/package.json
@@ -1,59 +1,29 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "npm run build:challenge-input && next dev --turbopack",
-    "build": "npm run build:challenge-input && next build",
-    "build:challenge-input": "tsx scripts/build-challenge-input.ts",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier . --write --ignore-unknown",
-    "format:check": "prettier . --check",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.8",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "front-matter": "^4.0.2",
-    "lucide-react": "^0.474.0",
-    "next": "^15.1.3",
-    "next-mdx-remote": "^5.0.0",
-    "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "remark-smartypants": "^3.0.2",
-    "server-only": "^0.0.1",
-    "sugar-high": "^0.9.3",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.46"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.30.1",
-    "@types/node": "^22.13.8",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "autoprefixer": "^10.4.21",
-    "dotenv": "^16.4.7",
-    "eslint": "^9.30.1",
-    "eslint-config-next": "^15.1.3",
-    "postcss": "^8.5.4",
-    "prettier": "^3.5.3",
-    "tailwindcss": "^3.4.17",
-    "tsx": "^4.19.2",
-    "typescript": "~5.7.3",
-    "typescript-eslint": "^8.35.1"
-  },
-  "engines": {
-    "node": ">=22.x.x"
-  },
-  "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
+	"name": "zacowan.com",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "biome check .",
+		"lint:fix": "biome check . --write",
+		"typecheck": "tsc --noEmit"
+	},
+	"dependencies": {
+		"next": "15.4.2",
+		"react": "19.1.0",
+		"react-dom": "19.1.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.1.2",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"tailwindcss": "^4",
+		"turbo": "^2.5.5",
+		"typescript": "^5"
+	},
+	"packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
