--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"motion": "^12.23.12",
 		"next": "15.4.2",
 		"react": "19.1.0",
 		"react-dom": "19.1.0"
