--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
 		"start": "next start",
 		"lint": "biome check .",
 		"lint:fix": "biome check . --write",
-		"typecheck": "tsc --noEmit"
+		"typecheck": "tsc --noEmit",
+		"check:rust": "cargo check",
+		"lint:rust": "cargo clippy",
+		"build:rust": "cargo build --release --target wasm32-unknown-unknown"
 	},
 	"dependencies": {
 		"motion": "^12.23.12",
