install deps in ci

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,8 @@ jobs:
         run: npm i -g corepack@latest
       - name: enable corepack
         run: corepack enable
-      - name: install dependencies
-        run: pnpm i
+      - name: install node and rust dependencies concurrently
+        run: |
+          pnpm i &
+          cargo install
       - run: pnpm turbo run ci
