--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,7 +52,7 @@ jobs:
           node-version-file: ".nvmrc"
       - name: install latest version of corepack
         run: npm i -g corepack@latest
-      - run: pnpm i turbo
+      - run: pnpm i
       - run: pnpm turbo run ci:rust
 
   build-rust:
@@ -83,4 +83,5 @@ jobs:
           node-version-file: ".nvmrc"
       - name: install latest version of corepack
         run: npm i -g corepack@latest
-      - run: pnpm dlx turbo run build:rust
+      - run: pnpm i
+      - run: pnpm turbo run build:rust
