--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@paper-design/shaders-react": "0.0.46",
+		"@vercel/toolbar": "^0.1.41",
 		"next": "15.4.2",
 		"react": "19.1.1",
 		"react-dom": "19.1.1"
